--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@chakra-ui/react": "^3.0.2",
+        "@emotion/react": "^11.13.3",
+        "@generouted/react-router": "^1.19.8",
+        "next-themes": "^0.3.0",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-icons": "^5.3.0",
+        "react-router-dom": "^6.27.0"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
@@ -21,6 +27,7 @@
         "@vitejs/plugin-react": "^4.3.3",
         "globals": "^15.11.0",
         "typescript": "~5.6.2",
-        "vite": "^5.4.10"
+        "vite": "^5.4.10",
+        "vite-tsconfig-paths": "^5.0.1"
     }
 }
