--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@chakra-ui/react": "^3.0.2",
         "@emotion/react": "^11.13.3",
         "@generouted/react-router": "^1.19.8",
+        "jotai": "2.9.3",
         "next-themes": "^0.3.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
